Summary of important user-visible changes for image 2.0.1:
-------------------------------------------------------------------

 ** The following functions are new:

      checkerboard
      cp2tform
      maketform
      strel
      tformfwd
      tforminv

 ** The following functions have been deprecated (see their help text
    for the recommended alternatives):

      imrotate_Fourier

 ** The use of non logical matrices to specify the neighborhood for the medfilt2
    function has been deprecated.  If using a vector to specify the size of the
    neighborhood, the elements are no longer swapped.

 ** For consistency with other functions that allow specification of padding
    values, the function padarray now accepts the string "zeros" as a valid
    option.

 ** The plot produced by `imhist' is correctly scaled on the X axis so that the
    colorbar corresponds to the actual intensity of the stems; the given
    colormarp is used on the colorbar for indexed images; and the stems no
    longer display the markers at their top. The Y axis is also adjusted in case
    of peaks with high values that prevent a good overview of the histogram.

 ** The `fftconv2' usage "fftconv2 (v1, v2, a)", for convolution of a matrix by
    one vector in the column direction and another vector in the row direction,
    has been removed. Please use conv2 for such cases.

 ** The function `rgbplot' accepts a style option which alows for a composite
    display of a colormap.

 ** The option to create poisson noise to an image has been added to `imnoise'.

 ** With the addition of the strel class, the following functions are now able
    to handle strel objects:

      imerode

 ** The functions `imerode' and `imdilate' no longer require that image and
    structuring element be of same class. They now perform faster for all black
    and white images, independently of their class, and always return an image