@@ -63,8 +63,10 @@ Enhancement and Restoration
  ordfiltn
  stretchlim
 Filtering and Transforms
+ findbounds
  fspecial
  imfilter
+ imtransform
  iradon
  nonmax_supress
  phantom
